[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "rpg_arena"
version = "0.1.0"
description = "A turn-based RPG arena game in Python"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.4.2",
]

[project.scripts]
rpg_arena = "rpg_arena:start_game"
[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
dev = [
    "pytest>=8.0"
]
docs = [
    "sphinx>=7.0.0",
    "furo"
]
