[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "rpg_arena"
version = "0.1.0"
description = "A turn-based RPG arena game in Python"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24.4",
]

[project.scripts]
rpg_arena = "rpg_arena.main:main"
[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
dev = [
    "pytest>=8.0"
]
docs = [
    "sphinx>=7.0.0",
    "furo"
]
